--- a/auctions/templates/auctions/snippets/card.html
+++ b/auctions/templates/auctions/snippets/card.html
@@ -1,10 +1,10 @@
 <div class="card" style="width: 35rem;">
 
 {%if  wall %}
-     {%  if instance.image %}
-         <a href="{% url 'auctions:detail' instance.id %}">
-             <img class="card-img-top" src="{{ instance.image.url }}" alt="No Image"> </a>
-     {% endif %}
+{#     {%  if instance.image %}#}
+{#         <a href="{% url 'auctions:detail' instance.id %}">#}
+{#             <img class="card-img-top" src="{{ instance.image.url }}" alt="No Image"> </a>#}
+{#     {% endif %}#}
      <div class="card-body">
      <a href="{% url 'auctions:detail' instance.id %}">
          <h5  class="card-title">{{ instance.title }}</h5></a>
@@ -20,10 +20,10 @@
          <p style="margin: 0; padding: 0" class="card-text"> <b>Auction Deadline :</b> {{ instance.deadline }}</p>
      </div>
 {% else %}
-    {%  if instance.image %}
-       <a href="{{ instance.get_absolute_url }}">
-        <img class="card-img-top" src="{{ instance.image.url }}" alt="No image"> </a>
-    {% endif %}
+{#    {%  if instance.image %}#}
+{#       <a href="{{ instance.get_absolute_url }}">#}
+{#        <img class="card-img-top" src="{{ instance.image.url }}" alt="No image"> </a>#}
+{#    {% endif %}#}
         <div class="card-body">
         <a href="{% url 'auctions:detail' instance.id %}">
             <h5 class="card-title">{{ instance.title }}</h5></a>
