--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -50,7 +50,7 @@
                     <div class="dropdown-menu  dropdown-menu-right " aria-labelledby="navbarSupportedContent" id="navbarSupportedContent">
                         <a class="dropdown-item" href="{{ my_profile_url }}">My Profile</a>
                         <a class="dropdown-item" href="{{ create_auction_url }}">Create Auction</a>
-                        <a class="dropdown-item" href="{{ statistic_chart_url }}">Stat</a>
+{#                        <a class="dropdown-item" href="{{ statistic_chart_url }}">Stat</a>#}
 
                         <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{{ logout_url }}">Logout</a>
@@ -58,7 +58,7 @@
 
         {% else %}
 {#            <li class="nav-item ">#}
-                <a class="nav-link " href="{{ login_url }}" role="button" aria-haspopup="true"
+                <a class="nav-link " href="{{ register_url }}" role="button" aria-haspopup="true"
                    aria-expanded="false">Register</a>
 {#            </li>#}
         {% endif %}
