--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -36,11 +36,11 @@
                                {% include 'search/snippets/search-form.html' %}
 
                             </div>
-            <ul class="navbar-nav">
-                 <li class="nav-item navbar-nav px-4">
-                    <a class="nav-link " href="{{ advanced_search_url }}" >Advanced search </a>
-                 </li>
-            </ul>
+{#            <ul class="navbar-nav">#}
+{#                 <li class="nav-item navbar-nav px-4">#}
+{#                    <a class="nav-link " href="{{ advanced_search_url }}" >Advanced search </a>#}
+{#                 </li>#}
+{#            </ul>#}
         <div class="collapse navbar-collapse " id="navbarMenu">
         <li class="navbar-nav ">
         {% if request.user.is_authenticated %}
@@ -48,22 +48,24 @@
                     aria-expanded="false"> <b>Hello {{ request.user.username }} </b><span class="caret "></span>
                     </a>
                     <div class="dropdown-menu  dropdown-menu-right " aria-labelledby="navbarSupportedContent" id="navbarSupportedContent">
-                        <a class="dropdown-item" href="{{ my_profile_url }}">My Profile</a>
-                        <a class="dropdown-item" href="{{ create_auction_url }}">Create Auction</a>
-{#                        <a class="dropdown-item" href="{{ statistic_chart_url }}">Stat</a>#}
-
+                        <a class="dropdown-item" href="{% url 'auctions:create_auction' %}">Create Auction</a>
+                        <a class="dropdown-item" href="{% url 'auctions:m_auction' %}">My Auctions</a>
+                        <a class="dropdown-item" href="{% url 'auctions:partecipated_auction' %}">Partecipated Auction</a>
+                        <a class="dropdown-item" href="{% url 'accounts:edit_profile' %}">Edit Profile</a>
                         <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{{ logout_url }}">Logout</a>
                     </div>
 
         {% else %}
-{#            <li class="nav-item ">#}
                 <a class="nav-link " href="{{ register_url }}" role="button" aria-haspopup="true"
                    aria-expanded="false">Register</a>
-{#            </li>#}
+
         {% endif %}
 
-
+        <button type="button" class="btn btn-secondary">
+                    Message <span class="badge badge-light">9</span>
+                        <span class="sr-only">unread messages</span>
+        </button>
         </div>
     </nav>
 
