--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -36,11 +36,11 @@
                                {% include 'search/snippets/search-form.html' %}
 
                             </div>
-{#            <ul class="navbar-nav">#}
-{#                 <li class="nav-item navbar-nav px-4">#}
-{#                    <a class="nav-link " href="{{ advanced_search_url }}" >Advanced search </a>#}
-{#                 </li>#}
-{#            </ul>#}
+            <ul class="navbar-nav">
+                 <li class="nav-item navbar-nav px-4">
+                    <a class="nav-link " href="{{ advanced_search_url }}" >Advanced search </a>
+                 </li>
+            </ul>
         <div class="collapse navbar-collapse " id="navbarMenu">
         <li class="navbar-nav ">
         {% if request.user.is_authenticated %}
@@ -62,10 +62,7 @@
 
         {% endif %}
 
-        <button type="button" class="btn btn-secondary">
-                    Message <span class="badge badge-light">9</span>
-                        <span class="sr-only">unread messages</span>
-        </button>
+
         </div>
     </nav>
 
