font more vissible and site more user friendle

--- a/auctions/templates/auctions/new_auction.html
+++ b/auctions/templates/auctions/new_auction.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block head %}
-    <title >New Auction</title>
+    <title xmlns="http://www.w3.org/1999/html">New Auction</title>
 {% endblock %}
 {% block content %}
     <h3>Fill in the forms </h3>
-    <form method="post" enctype="multipart/form-data"> {% csrf_token %}
-                          {{ form.as_p}}
-{#
+    <form  method="post" enctype="multipart/form-data"> {% csrf_token %}
 
+                {{ form.as_p}}
 
             {% if messages %}
                     <p align=" right" class="messages">
@@ -20,7 +19,7 @@
 
         <label><b>Expiry date and time  </b>
 
-                    <p>(aaaa-mm-gg) <input type="date" id="dataScadenza" value="" name="dataScadenza " required/></p>
+                    <p>(aaaa-mm-gg) <input  style="color:white" type="date" id="dataScadenza" value="" name="dataScadenza " required/></p>
                     <p>(hh:mm) <input type="time" id="oraScadenza" name="oraScadenza"   required/>
                         {% comment %}
                         <input id="clickMe" type="button" value="clickme" onclick="addTime()" />
