--- a/search/templates/search/advanced_search_view.html
+++ b/search/templates/search/advanced_search_view.html
@@ -1,11 +1,12 @@
-{% extends "base.html" %}
+{% extends "search/advanced_search.html" %}
+
 {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
 
 {% block head %}
     <title>Advanced search</title>
 {% endblock %}
-{% block content %}
+{% block search_risult %}
     <div class='col-12 col-md-6 mx-auto py-5'>
 {#        {% include 'search/snippets/search-form.html' %}#}
         </div>
