--- a/accounts/templates/accounts/profile_page.html
+++ b/accounts/templates/accounts/profile_page.html
@@ -29,7 +29,7 @@
 		                <div class="col-md-12">
 		                   {% block sub_head %}
 
-                           {% endblock %}
+                           {% endblock sub_head %}
 		                    <hr>
 		                </div>
 		            </div>
