--- a/search/templates/search/advanced_search.html
+++ b/search/templates/search/advanced_search.html
@@ -1,57 +1,93 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
+
+
+<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" xmlns="http://www.w3.org/1999/html"/>
 
 {% block head %}
     <title>Advanced Search</title>
-{% endblock %}
+{% endblock  %}
 
 {% block content %}
-    <h1 align="center"><b>Advanced Search</b></h1>
-    <div class="row mx-5 my-5">
-    <div class="col">
-        <form method="post" enctype="multipart/form-data"> {% csrf_token %}
-        <p>
-            <label><b>Title</b></label>
-            <input  style="color:white"  type="text" name="title">
-        </p>
-        <p>
-            <label><b>Price       </b></label>
-             <b>min</b><input style="color:white"   type="text"  placeholder="min"  type="number" name="min"   pattern="[0-9]{1,7}" maxlength="7" value="">
-             <b>max</b><input  style="color:white" type="text" placeholder="max" type="number" name="max" pattern="[0-9]{1,7}" maxlength="7"  value="">
-        </p>
-        <p align="left">
-            <label ><b>Category</b></label>
-                <select  style="color:white" name="select">
-                    <option value="" selected>---</option>
-                    {% for q in CATEGORY %}
-                    <option value="{{ q }}">{{ q }}</option>
-                    {% endfor %}
-                </select>
-        </p>
-        <p>
-            <label><b>Expire within :</b></label>
-            <select style="color:white" name="Expiry time">
-                <option value="" selected>---</option>
-                {% if request.user.is_authenticated %}
-                    <option  value="3">3h</option>
-                    <option  value="6">6h</option>
-                    <option  value="12">12h</option>
-                    <option value="24">24h</option>
-                    <option  value="48">48h</option>
-                {% else %}
-                    <option value="6">6h</option>
-                    <option value="12">12h</option>
-                    <option value="24">24h</option>
-                    <option value="48">48h</option>
 
-                {% endif %}
-            </select>
-        </p>
-            <input  class="btn btn-outline-success " type="submit" value="Search"/>
+    <div class="container my-5 mx-2">
+	<div class="row">
+		<div class="col-md-2 ">
+		     <div class="list-group ">
+             <form method="post" enctype="multipart/form-data"> {% csrf_token %}
+                <p> <label><b>Title</b></label>
+                    <input  style="color:white"  placeholder="title" type="text" name="title">  </p>
+                <p><label><b>Price       </b></label>
+                     min<input style="color:white"   type="text"  placeholder="min"  type="number" name="min"   pattern="[0-9]{1,7}" maxlength="7" value="">
+                </p><p>
+                        max<input  style="color:white" type="text" placeholder="max" type="number" name="max" pattern="[0-9]{1,7}" maxlength="7"  value="">
+                </p><p align="left">
+                    <label ><b>Category</b></label>
+                        <select  style="color:white" name="select">
+                            <option value="" selected>---</option>
+                            {% for q in CATEGORY %}
+                            <option value="{{ q }}">{{ q }}</option>
+                            {% endfor %}
+                        </select>
+                </p>
+                <p>
+                    <label><b>Expire within :</b></label>
+                    <select style="color:white" name="Expiry time">
+                        <option value="" selected>---</option>
+                        {% if request.user.is_authenticated %}
+                            <option  value="3">3h</option>
+                            <option  value="6">6h</option>
+                            <option  value="12">12h</option>
+                            <option value="24">24h</option>
+                            <option  value="48">48h</option>
+                        {% else %}
+                            <option value="6">6h</option>
+                            <option value="12">12h</option>
+                            <option value="24">24h</option>
+                            <option value="48">48h</option>
+
+                        {% endif %}
+                    </select>
+                </p>
+                    <input  class="btn btn-outline-success " type="submit" value="Search"/>
 
     </form>
-    </div>
- </div>
+
+            </div>
+		</div>
+		<div class="col-10 ml-auto">
+		    <div class="card">
+		        <div class="card-body">
+		            <div class="row">
+		                <div class="col-md-12">
+		                   {% block sub_head %}
+
+                           {% endblock sub_head %}
+		                    <hr>
+		                </div>
+		            </div>
+		            <div class="row">
+		                <div class="col-md-12">
+                            {% block search_risult %}
+
+
+
+
+                            {% endblock %}
+
+
+
+
+
+		                </div>
+		            </div>
+
+		        </div>
+		    </div>
+		</div>
+	</div>
+</div>
+
 {% endblock %}
+
