--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -16,7 +16,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark   ">
 
- <time class="navbar my-4" id="orario"> </time>
+ <time  style="color: white" class="navbar my-4" id="orario"> </time>
 
         <a class="navbar-brand" href='{{ home_url }}'>
           {% if brand_name %}{{ brand_name }}{% else %}LD-AUC-TION{% endif %}
@@ -26,10 +26,10 @@
          </button>
             {% if request.user.is_authenticated %}
                 <ul class="nav navbar-nav">
-                    <a class="nav-link " href="{{ wall_url }}" >Shop</a>
+                    <a style="color: white" class="nav-link " href="{{ wall_url }}" >Shop</a>
                  </ul>
             {% else %}
-                <a class="nav-link " href="{{ login_url }}" >Shop</a>
+                <a style="color: white" class="nav-link " href="{{ login_url }}" >Shop</a>
 
             {% endif %}
                         <div class='col-6 mx-auto py-0'>
@@ -38,7 +38,7 @@
                             </div>
             <ul class="navbar-nav">
                  <li class="nav-item navbar-nav px-4">
-                    <a class="nav-link " href="{{ advanced_search_url }}" >Advanced search </a>
+                    <a  style="color: white" class="nav-link " href="{{ advanced_search_url }}" >Advanced search </a>
                  </li>
             </ul>
         <div class="collapse navbar-collapse " id="navbarMenu">
