--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -5,21 +5,23 @@
 
 {% block head %}
     <title>Auction Home</title>
-    <link rel="stylesheet" href='{% static "css/main.css" %}'>
+{#    <link rel="stylesheet" href='{% static "css/main.css" %}'>#}
 
 {% endblock %}
 
     {% block content %}
        <div class="row">
        <div class="col">
+
         {% if object_list.count == 0 %}
             <p  align="center" ><b>No auction avail</b></p>
         {% else %}
-            {% for obj in object_list %}
-                <div class="col">
-
-                    {% include 'auctions/snippets/card.html' with instance=obj%}
+{#            {% for cat in object_by_cate %}#}
+                {% for obj in object_list %}
+                    <div class="col">
                     {%  if forloop.counter|divisibleby:3  %}
+                        {% include 'auctions/snippets/card.html' with instance=obj%}
+
                 </div>
                 <div class="row">
                 <div class="col-12">
